[gd_scene load_steps=7 format=4 uid="uid://c1u0k02nfhygq"]

[ext_resource type="TileSet" uid="uid://dulhu4nsq70uv" path="res://Maps/DungeonTileset.tres" id="1_oomlo"]
[ext_resource type="Script" uid="uid://coe42sdcqxy1m" path="res://Maps/MapBoss.gd" id="1_vx3fa"]
[ext_resource type="PackedScene" uid="uid://d1hnawkho7eos" path="res://Characters/Enemies/Bosses/DarkMage/DarkMage.tscn" id="3_l0kxp"]
[ext_resource type="PackedScene" uid="uid://djshger1h1fb5" path="res://Maps/MapElements/ExitDoor.tscn" id="4_u44s8"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1vbm6"]
vertices = PackedVector2Array(470, 26, 470, 470, 262, 470, 26, 26, 262, 502, 234, 502, 234, 470, 26, 470)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 4, 5, 6), PackedInt32Array(3, 2, 6), PackedInt32Array(3, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -8, 496, -8, 496, 496, 288, 496, 288, 528, 208, 528, 208, 496, 0, 496)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="Curve2D" id="Curve2D_s3m4f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 40, 40, 0, 0, 0, 0, 460, 40, 0, 0, 0, 0, 460, 460, 0, 0, 0, 0, 40, 460, 0, 0, 0, 0, 40, 40)
}
point_count = 5

[node name="MapBoss" type="Node2D"]
script = ExtResource("1_vx3fa")
SPAWN_ENEMIES = true
MAX_ENEMIES = 30

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_1vbm6")
navigation_layers = 2

[node name="Layer0" type="TileMapLayer" parent="NavigationRegion2D"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAAeAB4AAAAFAAQAAAAMABEAAAAGAAEAAAAMABAAAAAJAAIAAAAMAA8AAAAHAAAAAAAMAA4AAAAHAAAAAAAMAA0AAAAGAAIAAAAMAAwAAAAIAAEAAAAMAAsAAAAJAAIAAAAMAAoAAAAGAAAAAAAMAAkAAAAIAAIAAAAMAAgAAAAGAAEAAAAMAAcAAAAIAAAAAAAMAAYAAAAHAAIAAAAMAAUAAAAHAAEAAAAMAAQAAAAJAAIAAAAMAAMAAAAGAAEAAAAMAAIAAAAHAAAAAAAMAAEAAAABAAYAAAAMAAAAAAABAAAAAAALAAAAAAABAAAAAAAKAAAAAAADAAAAAAAJAAAAAAACAAAAAAAIAAAAAAABAAAAAAAHAAAAAAAEAAAAAAAGAAAAAAABAAAAAAAFAAAAAAADAAAAAAAEAAAAAAACAAAAAAADAAAAAAABAAAAAAACAAAAAAADAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAEAAAAAAAoAAAAAAAIAAAAAAAsAAAAAAAEAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAMAAAAAABEAAAAAAAMAAAAAABIAAAAAAAEAAAAAABMAAAAAAAEAAAAAABQAAAAAAAEAAAAAABUAAAAAAAIAAAAAABYAAAAAAAAAAAAAABcAAAAAAAEAAAAAABgAAAAAAAAAAAAAABkAAAAAAAAAAAAAABoAAAAAAAIAAAAAABsAAAAAAAEAAAAAABwAAAAAAAAAAAAAAB0AAAAAAAAAAAAAAB4AAAAAAAQAAAABAB4AAAACAAQAAAABAB0AAAABAAEAAGABABwAAAADAAYAAGABABsAAAADAAYAAGABABoAAAABAAYAAGABABkAAAADAAYAAGABABgAAAABAAYAAGABABcAAAABAAYAAGABABYAAAACAAYAAGABABUAAAACAAYAAGABABQAAAAAAAYAAGABABMAAAADAAYAAGABABIAAAABAAYAAGABABEAAAABAAYAAGABABAAAAABAAIAAAABAA8AAAABAAIAAAABAA4AAAABAAIAAAABAA0AAAADAAYAAGABAAwAAAAAAAYAAGABAAsAAAADAAYAAGABAAoAAAADAAYAAGABAAkAAAABAAYAAGABAAgAAAABAAYAAGABAAcAAAADAAYAAGABAAYAAAAAAAYAAGABAAUAAAACAAYAAGABAAQAAAACAAYAAGABAAMAAAADAAYAAGABAAIAAAAAAAYAAGACAAIAAAAJAAAAAAACAAEAAAACAAYAAAADAAEAAAADAAYAAAADAAIAAAAIAAEAAAADAAMAAAAHAAAAAAACAAMAAAAIAAIAAAACAAQAAAAIAAAAAAACAAUAAAAIAAEAAAACAAYAAAAGAAIAAAACAAcAAAAHAAEAAAACAAgAAAAIAAAAAAACAAkAAAAIAAEAAAACAAoAAAAHAAAAAAACAAsAAAAIAAAAAAACAAwAAAAIAAAAAAACAA0AAAAJAAEAAAACAA4AAAAIAAEAAAACAA8AAAAGAAAAAAACABAAAAAJAAEAAAACABEAAAAIAAAAAAACABIAAAAIAAIAAAACABMAAAAJAAIAAAACABQAAAAHAAIAAAACABUAAAAJAAAAAAACABYAAAAJAAIAAAACABcAAAAIAAEAAAACABgAAAAHAAEAAAACABkAAAAGAAEAAAACABoAAAAHAAIAAAACABsAAAAJAAAAAAACABwAAAAJAAIAAAACAB0AAAACAAMAAAACAB4AAAADAAQAAAADAB4AAAABAAQAAAADAB0AAAABAAYAADADABwAAAAGAAIAAAADABsAAAAIAAAAAAADABoAAAAIAAAAAAADABkAAAAJAAAAAAADABgAAAAGAAAAAAADABcAAAAGAAIAAAADABYAAAAHAAIAAAADABUAAAAHAAEAAAADABQAAAAJAAEAAAADABMAAAAIAAEAAAADABIAAAAGAAIAAAADABEAAAAIAAEAAAADABAAAAAHAAEAAAADAA8AAAAJAAIAAAADAA4AAAAJAAEAAAADAA0AAAAIAAIAAAADAAwAAAAJAAEAAAADAAsAAAAHAAAAAAADAAoAAAAJAAIAAAADAAkAAAAIAAIAAAADAAgAAAAJAAEAAAADAAcAAAAGAAIAAAADAAYAAAAGAAIAAAADAAUAAAAGAAEAAAADAAQAAAAGAAIAAAAEAAQAAAAIAAEAAAAEAAMAAAAIAAIAAAAEAAIAAAAHAAIAAAAEAAEAAAAAAAYAAAAFAAEAAAACAAYAAAAFAAIAAAAIAAIAAAAFAAMAAAAHAAAAAAAFAAQAAAAIAAIAAAAFAAUAAAAHAAIAAAAEAAUAAAAHAAIAAAAEAAYAAAAIAAAAAAAEAAcAAAAIAAEAAAAEAAgAAAAHAAIAAAAEAAkAAAAJAAIAAAAEAAoAAAAJAAEAAAAEAAsAAAAHAAIAAAAEAAwAAAAHAAEAAAAEAA0AAAAGAAAAAAAEAA4AAAAGAAAAAAAEAA8AAAAIAAIAAAAEABAAAAAGAAIAAAAEABEAAAAIAAAAAAAEABIAAAAGAAEAAAAEABMAAAAGAAAAAAAEABQAAAAHAAIAAAAEABUAAAAIAAAAAAAEABYAAAAJAAIAAAAEABcAAAAJAAIAAAAEABgAAAAJAAEAAAAEABkAAAAIAAEAAAAEABoAAAAGAAAAAAAEABsAAAAIAAIAAAAEABwAAAAHAAEAAAAEAB0AAAACAAYAADAEAB4AAAABAAQAAAAFAB4AAAAEAAQAAAAFAB0AAAABAAYAADAFABwAAAAJAAAAAAAFABsAAAAHAAAAAAAFABoAAAAGAAIAAAAFABkAAAAHAAAAAAAFABgAAAAHAAAAAAAFABcAAAAJAAEAAAAFABYAAAAIAAIAAAAFABUAAAAJAAIAAAAFABQAAAAIAAIAAAAFABMAAAAIAAAAAAAFABIAAAAGAAEAAAAFABEAAAAHAAIAAAAFABAAAAAIAAIAAAAFAA8AAAAJAAAAAAAFAA4AAAAJAAEAAAAFAA0AAAAIAAIAAAAFAAwAAAAJAAAAAAAFAAsAAAAHAAEAAAAFAAoAAAAGAAAAAAAFAAkAAAAHAAEAAAAFAAgAAAAGAAEAAAAFAAcAAAAGAAAAAAAFAAYAAAAJAAEAAAAGAAYAAAAIAAEAAAAGAAUAAAAGAAEAAAAGAAQAAAAHAAEAAAAGAAMAAAAIAAEAAAAGAAIAAAAJAAEAAAAGAAEAAAABAAYAAAAHAAEAAAACAAYAAAAHAAIAAAAGAAAAAAAHAAMAAAAIAAAAAAAHAAQAAAAIAAAAAAAHAAUAAAAGAAEAAAAHAAYAAAAJAAAAAAAHAAcAAAAHAAAAAAAGAAcAAAAGAAAAAAAGAAgAAAAHAAAAAAAGAAkAAAAIAAIAAAAGAAoAAAAGAAIAAAAGAAsAAAAGAAIAAAAGAAwAAAAHAAAAAAAGAA0AAAAGAAAAAAAGAA4AAAAJAAEAAAAGAA8AAAAHAAEAAAAGABAAAAAGAAIAAAAGABEAAAAHAAIAAAAGABIAAAAGAAAAAAAGABMAAAAHAAIAAAAGABQAAAAHAAAAAAAGABUAAAAIAAEAAAAGABYAAAAHAAIAAAAGABcAAAAHAAEAAAAGABgAAAAJAAAAAAAGABkAAAAJAAAAAAAGABoAAAAJAAEAAAAGABsAAAAIAAEAAAAGABwAAAAHAAAAAAAGAB0AAAAAAAYAADAGAB4AAAADAAQAAAAHAB4AAAABAAQAAAAHAB0AAAABAAYAADAHABwAAAAGAAEAAAAHABsAAAAHAAIAAAAHABoAAAAJAAAAAAAHABkAAAAGAAEAAAAHABgAAAAJAAEAAAAHABcAAAAGAAAAAAAHABYAAAAIAAIAAAAHABUAAAAIAAAAAAAHABQAAAAJAAEAAAAHABMAAAAJAAEAAAAHABIAAAAJAAEAAAAHABEAAAAJAAEAAAAHABAAAAAGAAEAAAAHAA8AAAAJAAIAAAAHAA4AAAAHAAAAAAAHAA0AAAAHAAIAAAAHAAwAAAAJAAEAAAAHAAsAAAAIAAIAAAAHAAoAAAAHAAIAAAAHAAkAAAAHAAAAAAAHAAgAAAAIAAAAAAAIAAgAAAAHAAAAAAAIAAcAAAAJAAEAAAAIAAYAAAAJAAEAAAAIAAUAAAAHAAAAAAAIAAQAAAAJAAAAAAAIAAMAAAAIAAAAAAAIAAIAAAAIAAAAAAAIAAEAAAAAAAYAAAAJAAEAAAADAAYAAAAJAAIAAAAGAAIAAAAJAAMAAAAHAAIAAAAJAAQAAAAJAAEAAAAJAAUAAAAIAAIAAAAJAAYAAAAJAAAAAAAJAAcAAAAGAAAAAAAJAAgAAAAJAAEAAAAJAAkAAAAGAAEAAAAIAAkAAAAHAAAAAAAIAAoAAAAGAAAAAAAIAAsAAAAIAAIAAAAIAAwAAAAGAAAAAAAIAA0AAAAJAAAAAAAIAA4AAAAGAAAAAAAIAA8AAAAIAAAAAAAIABAAAAAIAAEAAAAIABEAAAAIAAAAAAAIABIAAAAHAAIAAAAIABMAAAAIAAAAAAAIABQAAAAHAAEAAAAIABUAAAAJAAIAAAAIABYAAAAHAAAAAAAIABcAAAAGAAEAAAAIABgAAAAIAAAAAAAIABkAAAAGAAEAAAAIABoAAAAJAAAAAAAIABsAAAAIAAIAAAAIABwAAAAIAAAAAAAIAB0AAAAAAAYAADAIAB4AAAACAAQAAAAJAB4AAAADAAQAAAAJAB0AAAABAAYAADAJABwAAAAJAAIAAAAJABsAAAAJAAEAAAAJABoAAAAIAAEAAAAJABkAAAAJAAEAAAAJABgAAAAHAAAAAAAJABcAAAAIAAIAAAAJABYAAAAIAAIAAAAJABUAAAAGAAEAAAAJABQAAAAJAAIAAAAJABMAAAAJAAEAAAAJABIAAAAIAAAAAAAJABEAAAAHAAIAAAAJABAAAAAGAAIAAAAJAA8AAAAJAAEAAAAJAA4AAAAHAAIAAAAJAA0AAAAHAAEAAAAJAAwAAAAIAAEAAAAJAAsAAAAIAAIAAAAJAAoAAAAIAAAAAAAKAAoAAAAIAAIAAAAKAAkAAAAIAAEAAAAKAAgAAAAIAAEAAAAKAAcAAAAGAAAAAAAKAAYAAAAJAAEAAAAKAAUAAAAJAAAAAAAKAAQAAAAJAAAAAAAKAAMAAAAHAAAAAAAKAAIAAAAGAAIAAAAKAAEAAAAAAAYAAAALAAEAAAADAAYAAAALAAIAAAAJAAIAAAALAAMAAAAIAAIAAAALAAQAAAAIAAIAAAALAAUAAAAJAAIAAAALAAYAAAAHAAAAAAALAAcAAAAGAAIAAAALAAgAAAAJAAAAAAALAAkAAAAGAAEAAAALAAoAAAAJAAIAAAALAAsAAAAHAAEAAAAKAAsAAAAGAAAAAAAKAAwAAAAHAAEAAAAKAA0AAAAGAAEAAAAKAA4AAAAJAAIAAAAKAA8AAAAJAAEAAAAKABAAAAAIAAAAAAAKABEAAAAGAAEAAAAKABIAAAAHAAAAAAAKABMAAAAGAAIAAAAKABQAAAAIAAAAAAAKABUAAAAGAAEAAAAKABYAAAAHAAAAAAAKABcAAAAJAAIAAAAKABgAAAAHAAAAAAAKABkAAAAHAAIAAAAKABoAAAAHAAEAAAAKABsAAAAGAAAAAAAKABwAAAAHAAIAAAAKAB0AAAADAAYAADAKAB4AAAABAAQAAAALAB4AAAAEAAQAAAALAB0AAAAAAAYAADALABwAAAAJAAIAAAALABsAAAAGAAAAAAALABoAAAAHAAEAAAALABkAAAAHAAAAAAALABgAAAAGAAIAAAALABcAAAAHAAIAAAALABYAAAAGAAEAAAALABUAAAAIAAAAAAALABQAAAAJAAAAAAALABMAAAAIAAEAAAALABIAAAAIAAAAAAALABEAAAAIAAAAAAALABAAAAAGAAAAAAALAA8AAAAHAAEAAAALAA4AAAAIAAAAAAALAA0AAAAGAAAAAAALAAwAAAAGAAIAAAAMABIAAAAGAAIAAAAMABMAAAAJAAEAAAAMABQAAAAIAAEAAAAMABUAAAAIAAIAAAAMABYAAAAHAAAAAAAMABcAAAAGAAAAAAAMABgAAAAGAAIAAAAMABkAAAAHAAIAAAAMABoAAAAIAAAAAAAMABsAAAAHAAAAAAAMABwAAAAHAAIAAAAMAB0AAAACAAYAADAMAB4AAAABAAQAAAANAB4AAAADAAUAAAANAB0AAAAAAAYAADANABwAAAAGAAEAAAANABsAAAAJAAEAAAANABoAAAAIAAAAAAANABkAAAAIAAAAAAANABgAAAAGAAAAAAANABcAAAAHAAAAAAANABYAAAAIAAEAAAANABUAAAAHAAIAAAANABQAAAAHAAIAAAANABMAAAAJAAEAAAANABIAAAAHAAEAAAANABEAAAAJAAIAAAANABAAAAAJAAEAAAANAA8AAAAIAAEAAAANAA4AAAAGAAIAAAANAA0AAAAJAAIAAAANAAwAAAAIAAIAAAANAAsAAAAHAAAAAAANAAoAAAAHAAAAAAANAAkAAAAIAAEAAAANAAgAAAAIAAEAAAANAAcAAAAHAAIAAAANAAYAAAAGAAAAAAANAAUAAAAIAAEAAAANAAQAAAAIAAAAAAANAAMAAAAIAAIAAAANAAIAAAAHAAAAAAANAAEAAAABAAYAAAANAAAAAAADAAAAAAAOAAEAAAACAAEAAAAOAAIAAAAJAAIAAAAOAAMAAAAIAAEAAAAOAAQAAAAIAAAAAAAOAAUAAAAJAAEAAAAOAAYAAAAIAAEAAAAOAAcAAAAIAAAAAAAOAAgAAAAIAAIAAAAOAAkAAAAJAAAAAAAOAAoAAAAGAAAAAAAOAAsAAAAGAAAAAAAOAAwAAAAIAAEAAAAOAA0AAAAHAAAAAAAOAA4AAAAJAAAAAAAOAA8AAAAGAAIAAAAOABAAAAAGAAIAAAAOABEAAAAGAAIAAAAOABIAAAAGAAEAAAAOABMAAAAIAAAAAAAOABQAAAAIAAAAAAAOABUAAAAJAAIAAAAOABYAAAAGAAAAAAAOABcAAAAHAAIAAAAOABgAAAAIAAEAAAAOABkAAAAGAAEAAAAOABoAAAAIAAIAAAAOABsAAAAHAAEAAAAOABwAAAAJAAAAAAAOAB0AAAAIAAAAAAAPAB0AAAAIAAEAAAAPABwAAAAJAAEAAAAPABsAAAAJAAEAAAAPABoAAAAHAAAAAAAPABkAAAAGAAEAAAAPABgAAAAGAAAAAAAPABcAAAAJAAEAAAAPABYAAAAJAAEAAAAPABUAAAAHAAEAAAAPABQAAAAIAAAAAAAPABMAAAAJAAIAAAAPABIAAAAJAAAAAAAPABEAAAAJAAEAAAAPABAAAAAHAAIAAAAPAA8AAAAGAAAAAAAPAA4AAAAJAAAAAAAPAA0AAAAGAAEAAAAPAAwAAAAIAAAAAAAPAAsAAAAJAAAAAAAPAAoAAAAIAAEAAAAPAAkAAAAHAAAAAAAPAAgAAAAIAAIAAAAPAAcAAAAJAAEAAAAPAAYAAAAGAAAAAAAPAAUAAAAGAAAAAAAPAAQAAAAGAAAAAAAPAAMAAAAHAAAAAAAPAAIAAAAHAAAAAAAPAAEAAAADAAEAAAAQAAEAAAADAAEAAAAQAAIAAAAIAAAAAAAQAAMAAAAJAAEAAAAQAAQAAAAGAAIAAAAQAAUAAAAJAAEAAAAQAAYAAAAJAAIAAAAQAAcAAAAGAAIAAAAQAAgAAAAHAAEAAAAQAAkAAAAIAAIAAAAQAAoAAAAHAAEAAAAQAAsAAAAIAAAAAAAQAAwAAAAJAAEAAAAQAA0AAAAHAAIAAAAQAA4AAAAHAAAAAAAQAA8AAAAIAAIAAAAQABAAAAAIAAIAAAAQABEAAAAGAAEAAAAQABIAAAAJAAAAAAAQABMAAAAHAAIAAAAQABQAAAAJAAEAAAAQABUAAAAIAAEAAAAQABYAAAAGAAEAAAAQABcAAAAHAAEAAAAQABgAAAAHAAAAAAAQABkAAAAGAAIAAAAQABoAAAAGAAAAAAAQABsAAAAHAAEAAAAQABwAAAAJAAAAAAAQAB0AAAAHAAEAAAARAB4AAAAEAAUAAAARAB0AAAABAAYAADARABwAAAAJAAAAAAARABsAAAAHAAAAAAARABoAAAAHAAEAAAARABkAAAAGAAAAAAARABgAAAAJAAAAAAARABcAAAAGAAEAAAARABYAAAAHAAAAAAARABUAAAAHAAIAAAARABQAAAAGAAIAAAARABMAAAAJAAIAAAARABIAAAAHAAEAAAARABEAAAAIAAAAAAARABAAAAAIAAIAAAARAA8AAAAIAAIAAAARAA4AAAAIAAEAAAARAA0AAAAIAAIAAAARAAwAAAAJAAAAAAARAAsAAAAHAAIAAAARAAoAAAAHAAAAAAARAAkAAAAGAAEAAAARAAgAAAAJAAEAAAARAAcAAAAJAAAAAAARAAYAAAAGAAIAAAARAAUAAAAJAAEAAAARAAQAAAAJAAEAAAARAAMAAAAGAAEAAAARAAIAAAAHAAAAAAARAAEAAAAAAAYAAAARAAAAAAABAAAAAAASAAAAAAADAAAAAAASAAEAAAABAAYAAAASAAIAAAAGAAIAAAASAAMAAAAIAAEAAAASAAQAAAAGAAAAAAASAAUAAAAJAAAAAAASAAYAAAAJAAAAAAASAAcAAAAIAAEAAAASAAgAAAAHAAIAAAASAAkAAAAGAAAAAAASAAoAAAAJAAIAAAASAAsAAAAGAAIAAAASAAwAAAAGAAAAAAASAA0AAAAGAAAAAAASAA4AAAAIAAIAAAASAA8AAAAIAAIAAAASABAAAAAIAAIAAAASABEAAAAHAAAAAAASABIAAAAGAAAAAAASABMAAAAIAAAAAAASABQAAAAJAAAAAAASABUAAAAHAAIAAAASABYAAAAGAAAAAAASABcAAAAIAAAAAAASABgAAAAGAAEAAAASABkAAAAIAAAAAAASABoAAAAIAAEAAAASABsAAAAIAAIAAAASABwAAAAHAAIAAAASAB0AAAABAAYAADASAB4AAAAEAAQAAAATAB4AAAADAAQAAAATAB0AAAADAAYAADATABwAAAAIAAIAAAATABsAAAAJAAEAAAATABoAAAAGAAAAAAATABkAAAAGAAEAAAATABgAAAAIAAEAAAATABcAAAAGAAIAAAATABYAAAAGAAIAAAATABUAAAAJAAAAAAATABQAAAAHAAEAAAATABMAAAAGAAEAAAATABIAAAAIAAAAAAATABEAAAAHAAEAAAATABAAAAAGAAAAAAATAA8AAAAIAAEAAAATAA4AAAAJAAEAAAATAA0AAAAJAAEAAAATAAwAAAAHAAAAAAATAAsAAAAHAAAAAAATAAoAAAAIAAEAAAATAAkAAAAGAAAAAAATAAgAAAAHAAIAAAATAAcAAAAGAAEAAAATAAYAAAAHAAEAAAATAAUAAAAJAAIAAAATAAQAAAAJAAEAAAATAAMAAAAGAAIAAAATAAIAAAAJAAIAAAATAAEAAAABAAYAAAATAAAAAAADAAAAAAAUAAAAAAACAAAAAAAUAAEAAAAAAAYAAAAUAAIAAAAHAAAAAAAUAAMAAAAHAAIAAAAUAAQAAAAIAAIAAAAUAAUAAAAJAAEAAAAUAAYAAAAGAAIAAAAUAAcAAAAGAAEAAAAUAAgAAAAJAAAAAAAUAAkAAAAHAAEAAAAUAAoAAAAHAAEAAAAUAAsAAAAGAAIAAAAUAAwAAAAIAAIAAAAUAA0AAAAIAAAAAAAUAA4AAAAGAAIAAAAUAA8AAAAHAAAAAAAUABAAAAAIAAIAAAAUABEAAAAGAAIAAAAUABIAAAAJAAAAAAAUABMAAAAGAAAAAAAUABQAAAAGAAIAAAAUABUAAAAIAAIAAAAUABYAAAAGAAIAAAAUABcAAAAGAAIAAAAUABgAAAAIAAIAAAAUABkAAAAJAAAAAAAUABoAAAAHAAAAAAAUABsAAAAGAAAAAAAUABwAAAAIAAAAAAAUAB0AAAACAAYAADAUAB4AAAABAAQAAAAVAB4AAAACAAQAAAAVAB0AAAABAAYAADAVABwAAAAHAAIAAAAVABsAAAAHAAAAAAAVABoAAAAJAAEAAAAVABkAAAAJAAAAAAAVABgAAAAJAAAAAAAVABcAAAAGAAAAAAAVABYAAAAGAAIAAAAVABUAAAAIAAEAAAAVABQAAAAGAAEAAAAVABMAAAAJAAIAAAAVABIAAAAHAAEAAAAVABEAAAAIAAEAAAAVABAAAAAIAAEAAAAVAA8AAAAGAAEAAAAVAA4AAAAJAAAAAAAVAA0AAAAIAAEAAAAVAAwAAAAHAAIAAAAVAAsAAAAJAAIAAAAVAAoAAAAHAAAAAAAVAAkAAAAIAAAAAAAVAAgAAAAGAAAAAAAVAAcAAAAHAAEAAAAVAAYAAAAIAAIAAAAVAAUAAAAGAAIAAAAVAAQAAAAGAAIAAAAVAAMAAAAHAAAAAAAVAAIAAAAIAAEAAAAVAAEAAAADAAYAAAAVAAAAAAAEAAAAAAAWAAAAAAAEAAAAAAAWAAEAAAABAAYAAAAWAAIAAAAGAAEAAAAWAAMAAAAGAAIAAAAWAAQAAAAIAAAAAAAWAAUAAAAGAAAAAAAWAAYAAAAJAAAAAAAWAAcAAAAGAAEAAAAWAAgAAAAIAAAAAAAWAAkAAAAHAAAAAAAWAAoAAAAHAAEAAAAWAAsAAAAHAAAAAAAWAAwAAAAGAAAAAAAWAA0AAAAHAAEAAAAWAA4AAAAIAAIAAAAWAA8AAAAIAAEAAAAWABAAAAAHAAIAAAAWABEAAAAJAAIAAAAWABIAAAAGAAIAAAAWABMAAAAJAAEAAAAWABQAAAAGAAEAAAAWABUAAAAJAAAAAAAWABYAAAAHAAEAAAAWABcAAAAHAAIAAAAWABgAAAAGAAIAAAAWABkAAAAIAAIAAAAWABoAAAAHAAAAAAAWABsAAAAJAAAAAAAWABwAAAAHAAEAAAAWAB0AAAABAAYAADAWAB4AAAABAAQAAAAXAB4AAAAEAAQAAAAXAB0AAAABAAYAADAXABwAAAAHAAAAAAAXABsAAAAIAAAAAAAXABoAAAAIAAIAAAAXABkAAAAJAAEAAAAXABgAAAAJAAIAAAAXABcAAAAIAAAAAAAXABYAAAAIAAIAAAAXABUAAAAHAAAAAAAXABQAAAAHAAIAAAAXABMAAAAGAAEAAAAXABIAAAAJAAAAAAAXABEAAAAJAAIAAAAXABAAAAAGAAIAAAAXAA8AAAAJAAAAAAAXAA4AAAAGAAEAAAAXAA0AAAAGAAAAAAAXAAwAAAAHAAIAAAAXAAsAAAAGAAAAAAAXAAoAAAAHAAEAAAAXAAkAAAAGAAIAAAAXAAgAAAAGAAEAAAAXAAcAAAAGAAEAAAAXAAYAAAAGAAAAAAAXAAUAAAAHAAAAAAAXAAQAAAAGAAEAAAAXAAMAAAAHAAIAAAAXAAIAAAAHAAIAAAAXAAEAAAAAAAYAAAAXAAAAAAABAAAAAAAYAAAAAAAEAAAAAAAYAAEAAAADAAYAAAAYAAIAAAAJAAEAAAAYAAMAAAAGAAIAAAAYAAQAAAAHAAIAAAAYAAUAAAAGAAEAAAAYAAYAAAAIAAEAAAAYAAcAAAAJAAEAAAAYAAgAAAAIAAEAAAAYAAkAAAAGAAAAAAAYAAoAAAAIAAEAAAAYAAsAAAAJAAIAAAAYAAwAAAAGAAIAAAAYAA0AAAAHAAIAAAAYAA4AAAAIAAAAAAAYAA8AAAAIAAAAAAAYABAAAAAJAAEAAAAYABEAAAAIAAIAAAAYABIAAAAIAAIAAAAYABMAAAAIAAEAAAAYABQAAAAIAAIAAAAYABUAAAAIAAIAAAAYABYAAAAIAAEAAAAYABcAAAAJAAAAAAAYABgAAAAHAAAAAAAYABkAAAAHAAEAAAAYABoAAAAJAAAAAAAYABsAAAAGAAEAAAAYABwAAAAJAAEAAAAYAB0AAAACAAYAADAYAB4AAAADAAQAAAAZAB4AAAABAAQAAAAZAB0AAAADAAYAADAZABwAAAAJAAAAAAAZABsAAAAJAAEAAAAZABoAAAAJAAIAAAAZABkAAAAHAAAAAAAZABgAAAAJAAEAAAAZABcAAAAHAAIAAAAZABYAAAAIAAIAAAAZABUAAAAHAAAAAAAZABQAAAAJAAIAAAAZABMAAAAIAAIAAAAZABIAAAAHAAEAAAAZABEAAAAHAAEAAAAZABAAAAAGAAEAAAAZAA8AAAAIAAEAAAAZAA4AAAAJAAEAAAAZAA0AAAAGAAAAAAAZAAwAAAAGAAEAAAAZAAsAAAAJAAEAAAAZAAoAAAAIAAAAAAAZAAkAAAAIAAIAAAAZAAgAAAAGAAIAAAAZAAcAAAAJAAIAAAAZAAYAAAAGAAIAAAAZAAUAAAAJAAIAAAAZAAQAAAAGAAEAAAAZAAMAAAAHAAIAAAAZAAIAAAAJAAAAAAAZAAEAAAAAAAYAAAAZAAAAAAAEAAAAAAAaAAAAAAABAAAAAAAaAAEAAAAAAAYAAAAaAAIAAAAIAAIAAAAaAAMAAAAHAAIAAAAaAAQAAAAGAAEAAAAaAAUAAAAJAAEAAAAaAAYAAAAIAAIAAAAaAAcAAAAGAAEAAAAaAAgAAAAIAAAAAAAaAAkAAAAGAAEAAAAaAAoAAAAIAAEAAAAaAAsAAAAHAAAAAAAaAAwAAAAGAAEAAAAaAA0AAAAGAAIAAAAaAA4AAAAHAAIAAAAaAA8AAAAIAAIAAAAaABAAAAAIAAEAAAAaABEAAAAGAAAAAAAaABIAAAAHAAAAAAAaABMAAAAGAAAAAAAaABQAAAAGAAAAAAAaABUAAAAIAAAAAAAaABYAAAAHAAEAAAAaABcAAAAHAAAAAAAaABgAAAAIAAAAAAAaABkAAAAHAAIAAAAaABoAAAAJAAEAAAAaABsAAAAHAAEAAAAaABwAAAAGAAIAAAAaAB0AAAACAAYAADAaAB4AAAAEAAQAAAAbAB4AAAADAAQAAAAbAB0AAAACAAYAADAbABwAAAAJAAIAAAAbABsAAAAHAAAAAAAbABoAAAAHAAAAAAAbABkAAAAIAAIAAAAbABgAAAAHAAEAAAAbABcAAAAIAAAAAAAbABYAAAAIAAEAAAAbABUAAAAHAAEAAAAbABQAAAAHAAEAAAAbABMAAAAHAAAAAAAbABIAAAAHAAIAAAAbABEAAAAIAAEAAAAbABAAAAAGAAIAAAAbAA8AAAAJAAAAAAAbAA4AAAAHAAAAAAAbAA0AAAAIAAIAAAAbAAwAAAAJAAEAAAAbAAsAAAAGAAEAAAAbAAoAAAAJAAAAAAAbAAkAAAAJAAIAAAAbAAgAAAAIAAIAAAAbAAcAAAAIAAAAAAAbAAYAAAAJAAEAAAAbAAUAAAAIAAEAAAAbAAQAAAAHAAIAAAAbAAMAAAAIAAIAAAAbAAIAAAAJAAIAAAAbAAEAAAABAAYAAAAbAAAAAAADAAAAAAAcAAAAAAADAAAAAAAcAAEAAAAAAAYAAAAcAAIAAAAGAAEAAAAcAAMAAAAHAAIAAAAcAAQAAAAHAAIAAAAcAAUAAAAHAAAAAAAcAAYAAAAIAAEAAAAcAAcAAAAIAAEAAAAcAAgAAAAJAAAAAAAcAAkAAAAHAAIAAAAcAAoAAAAIAAEAAAAcAAsAAAAJAAAAAAAcAAwAAAAIAAEAAAAcAA0AAAAGAAIAAAAcAA4AAAAIAAAAAAAcAA8AAAAGAAAAAAAcABAAAAAJAAIAAAAcABEAAAAHAAAAAAAcABIAAAAGAAAAAAAcABMAAAAJAAIAAAAcABQAAAAGAAEAAAAcABUAAAAGAAIAAAAcABYAAAAJAAEAAAAcABcAAAAHAAEAAAAcABgAAAAJAAIAAAAcABkAAAAJAAIAAAAcABoAAAAGAAAAAAAcABsAAAAGAAIAAAAcABwAAAAJAAEAAAAcAB0AAAAAAAYAADAcAB4AAAABAAQAAAAdAB4AAAABAAQAAAAdAB0AAAABAAEAADAdABwAAAAAAAYAAFAdABsAAAACAAYAAFAdABoAAAADAAYAAFAdABkAAAAAAAYAAFAdABgAAAABAAYAAFAdABcAAAABAAYAAFAdABYAAAABAAYAAFAdABUAAAABAAYAAFAdABQAAAADAAYAAFAdABMAAAACAAYAAFAdABIAAAABAAYAAFAdABEAAAABAAYAAFAdABAAAAAEAAIAAAAdAA8AAAAEAAIAAAAdAA4AAAAEAAIAAAAdAA0AAAAAAAYAAFAdAAwAAAACAAYAAFAdAAsAAAADAAYAAFAdAAoAAAADAAYAAFAdAAkAAAAAAAYAAFAdAAgAAAACAAYAAFAdAAcAAAABAAYAAFAdAAYAAAAAAAYAAFAdAAUAAAADAAYAAFAdAAQAAAABAAYAAFAdAAMAAAADAAYAAFAdAAIAAAAAAAYAAFAdAAEAAAABAAEAAFAdAAAAAAADAAAAAAAeAAAAAAAFAAMAAAAeAAEAAAAFAAIAAAAeAAIAAAAFAAAAAAAeAAMAAAAFAAEAAAAeAAQAAAAFAAAAAAAeAAUAAAAFAAMAAAAeAAYAAAAFAAIAAAAeAAcAAAAFAAMAAAAeAAgAAAAFAAEAAAAeAAkAAAAFAAMAAAAeAAoAAAAFAAAAAAAeAAsAAAAFAAMAAAAeAAwAAAAFAAIAAAAeAA0AAAAFAAMAAAAeABEAAAAFAAMAAAAeABIAAAAFAAAAAAAeABMAAAAFAAIAAAAeABQAAAAFAAMAAAAeABUAAAAFAAIAAAAeABYAAAAFAAEAAAAeABcAAAAFAAMAAAAeABgAAAAFAAMAAAAeABkAAAAFAAIAAAAeABoAAAAFAAEAAAAeABsAAAAFAAIAAAAeABwAAAAFAAIAAAAeAB0AAAAFAAAAAAAOAAAAAAACAAAAAAAQAAAAAAACAAAAAAAPAAAAAAACAAAAAAAeAA8AAAAFAAMAAAAAAA8AAAAAAAMAAAAeABAAAAAFAAMAAAAeAA4AAAAFAAMAAAAAAA4AAAAAAAMAAAAAABAAAAAAAAMAAAAOACAAAAACAAQAAAAPACAAAAACAAQAAAAQACAAAAAEAAQAAAARACAAAAAFAAQAAAANACAAAAAAAAQAAAANAB8AAAAAAAIAAAARAB8AAAAFAAIAAAAQAB4AAAAEAAIAAAAQAB8AAAAEAAMAAAAOAB4AAAABAAIAAAAOAB8AAAABAAMAAAAPAB8AAAADAAMAAAAPAB4AAAADAAIAAAA=")
tile_set = ExtResource("1_oomlo")

[node name="Layer1" type="TileMapLayer" parent="NavigationRegion2D"]
tile_set = ExtResource("1_oomlo")

[node name="PlayerSpawnLoc" type="Node2D" parent="."]
position = Vector2(248, 496)

[node name="DarkMage" parent="." instance=ExtResource("3_l0kxp")]
position = Vector2(249, 235)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_s3m4f")

[node name="MoveTimer" type="Timer" parent="Path2D"]
wait_time = 3.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="Path2D/MoveTimer"]
wait_time = 3.0
one_shot = true

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(460, 287.298)
rotation = 1.5708
progress = 667.296

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D"]
position = Vector2(40, 40)

[node name="ExitDoor" parent="." instance=ExtResource("4_u44s8")]
visible = false
position = Vector2(248, 248)

[connection signal="timeout" from="Path2D/MoveTimer/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
